// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slack Element widgets renders a button element 1`] = `
Object {
  "action_id": "ravenAgree",
  "text": Object {
    "emoji": true,
    "text": "Ravenclaw is obviously the best house.",
    "type": "plain_text",
  },
  "type": "button",
}
`;

exports[`Slack Element widgets renders a conversation select input element opts that override 1`] = `
Object {
  "action_id": "channel",
  "initial_conversation": "GRK5NTHV2",
  "placeholder": Object {
    "emoji": true,
    "text": "Select a channel",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`Slack Element widgets renders a conversation select input element with initial option 1`] = `
Object {
  "action_id": "channel",
  "initial_conversation": "GRK5NTHV1",
  "placeholder": Object {
    "emoji": true,
    "text": "Select a channel",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`Slack Element widgets renders a minimal conversation select input element 1`] = `
Object {
  "action_id": "channel",
  "initial_conversation": undefined,
  "placeholder": Object {
    "emoji": true,
    "text": "Select a channel",
    "type": "plain_text",
  },
  "type": "conversations_select",
}
`;

exports[`Slack Element widgets renders a minimal multi-conversation select input element 1`] = `
Object {
  "action_id": "channel",
  "initial_conversations": undefined,
  "placeholder": Object {
    "emoji": true,
    "text": "Select channels",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Slack Element widgets renders a minimal multi-users select input element 1`] = `
Object {
  "action_id": "users",
  "initial_users": undefined,
  "placeholder": Object {
    "emoji": true,
    "text": "Select users",
    "type": "plain_text",
  },
  "type": "multi_users_select",
}
`;

exports[`Slack Element widgets renders a minimal plain-text input element 1`] = `
Object {
  "action_id": "title",
  "initial_value": "and the Prisoner of Azkaban",
  "placeholder": Object {
    "emoji": true,
    "text": "Enter a title",
    "type": "plain_text",
  },
  "type": "plain_text_input",
}
`;

exports[`Slack Element widgets renders a minimal radio input element 1`] = `
Object {
  "action_id": "title",
  "initial_option": undefined,
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Slack Element widgets renders a minimal static select input element 1`] = `
Object {
  "action_id": "title",
  "initial_option": undefined,
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select a book",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Slack Element widgets renders a minimal users select input element 1`] = `
Object {
  "action_id": "user",
  "initial_user": undefined,
  "placeholder": Object {
    "emoji": true,
    "text": "Select a user",
    "type": "plain_text",
  },
  "type": "users_select",
}
`;

exports[`Slack Element widgets renders a multi-conversation select input element opts that override 1`] = `
Object {
  "action_id": "channel",
  "initial_conversations": Array [
    "GRK5NTHV2",
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select channels",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Slack Element widgets renders a multi-conversation select input element with initial option 1`] = `
Object {
  "action_id": "channel",
  "initial_conversations": Array [
    "GRK5NTHV1",
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select channels",
    "type": "plain_text",
  },
  "type": "multi_conversations_select",
}
`;

exports[`Slack Element widgets renders a multi-users select input element opts that override 1`] = `
Object {
  "action_id": "users",
  "initial_users": Array [
    "DPBMEQCM8",
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select users",
    "type": "plain_text",
  },
  "type": "multi_users_select",
}
`;

exports[`Slack Element widgets renders a multi-users select input element with initial option 1`] = `
Object {
  "action_id": "users",
  "initial_users": Array [
    "DPJ215Q65",
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select users",
    "type": "plain_text",
  },
  "type": "multi_users_select",
}
`;

exports[`Slack Element widgets renders a plain-text input element with initial value, placeholder, and opts 1`] = `
Object {
  "action_id": "title",
  "initial_value": "and the Prisoner of Azkaban",
  "max_length": 200,
  "min_length": 10,
  "multiline": true,
  "placeholder": Object {
    "emoji": true,
    "text": "Enter a title",
    "type": "plain_text",
  },
  "type": "plain_text_input",
}
`;

exports[`Slack Element widgets renders a plaintext object 1`] = `
Object {
  "emoji": true,
  "text": "Ravenclaw is obviously the best house.",
  "type": "plain_text",
}
`;

exports[`Slack Element widgets renders a plaintext object without emoji 1`] = `
Object {
  "emoji": false,
  "text": "Ravenclaw is obviously the best house.",
  "type": "plain_text",
}
`;

exports[`Slack Element widgets renders a radio input element opts that override 1`] = `
Object {
  "action_id": "title",
  "initial_option": Object {
    "text": Object {
      "emoji": true,
      "text": "6",
      "type": "plain_text",
    },
    "value": "and the Half-Blood Prince",
  },
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Slack Element widgets renders a radio input element with initial option 1`] = `
Object {
  "action_id": "title",
  "initial_option": Object {
    "text": Object {
      "emoji": true,
      "text": "3",
      "type": "plain_text",
    },
    "value": "and the Prisoner of Azkaban",
  },
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "type": "radio_buttons",
}
`;

exports[`Slack Element widgets renders a static select input element opts that override 1`] = `
Object {
  "action_id": "title",
  "initial_option": Object {
    "text": Object {
      "emoji": true,
      "text": "6",
      "type": "plain_text",
    },
    "value": "and the Half-Blood Prince",
  },
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select a book",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Slack Element widgets renders a static select input element with initial option 1`] = `
Object {
  "action_id": "title",
  "initial_option": Object {
    "text": Object {
      "emoji": true,
      "text": "3",
      "type": "plain_text",
    },
    "value": "and the Prisoner of Azkaban",
  },
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "3",
        "type": "plain_text",
      },
      "value": "and the Prisoner of Azkaban",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "6",
        "type": "plain_text",
      },
      "value": "and the Half-Blood Prince",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "7",
        "type": "plain_text",
      },
      "value": "and the Deathly Hallows",
    },
  ],
  "placeholder": Object {
    "emoji": true,
    "text": "Select a book",
    "type": "plain_text",
  },
  "type": "static_select",
}
`;

exports[`Slack Element widgets renders a users select input element opts that override 1`] = `
Object {
  "action_id": "channel",
  "initial_user": "DPBMEQCM8",
  "placeholder": Object {
    "emoji": true,
    "text": "Select a user",
    "type": "plain_text",
  },
  "type": "users_select",
}
`;

exports[`Slack Element widgets renders a users select input element with initial option 1`] = `
Object {
  "action_id": "user",
  "initial_user": "DPJ215Q65",
  "placeholder": Object {
    "emoji": true,
    "text": "Select a user",
    "type": "plain_text",
  },
  "type": "users_select",
}
`;

exports[`Slack Element widgets renders an image element 1`] = `
Object {
  "alt_text": "Ravenclaw is obviously the best house.",
  "image_url": "http://placekitten.com/700/500",
  "type": "image",
}
`;

exports[`Slack Element widgets renders an option object 1`] = `
Object {
  "text": Object {
    "emoji": true,
    "text": "Why best?",
    "type": "plain_text",
  },
  "value": "why-best-raven",
}
`;

exports[`Slack Element widgets renders an overflow menu element 1`] = `
Object {
  "action_id": "house-actions",
  "options": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "Why best?",
        "type": "plain_text",
      },
      "value": "why-best-raven",
    },
    Object {
      "text": Object {
        "emoji": true,
        "text": "Ping JK",
        "type": "plain_text",
      },
      "value": "notify-author",
    },
  ],
  "type": "overflow",
}
`;

exports[`Slack Element widgets renders markdown object 1`] = `
Object {
  "text": "Ravenclaw is obviously the best house.",
  "type": "mrkdwn",
}
`;
